# concatenative-python

./: LICENSE  README.md  concat.py  pyproject.toml
