[tool.poetry]
name = "concatenative-python"
version = "0.1.0"
description = ""
authors = ["Philip Dexter <philip.dexter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
